--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "redux-devtools-extension": "^2.13.0"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
