--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "axios": "^0.16.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
+    "react-md": "^1.0.11",
     "react-redux": "^5.0.4",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.6"
   },
