--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "saga-react-md-rrf",
+  "name": "react-md-examples",
+  "homepage": "https://tuanngominh.github.io/react-md-examples",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5",
     "redux-devtools": "^3.3.2",
     "redux-devtools-extension": "^2.13.0"
@@ -24,6 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
