--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
@@ -19,6 +20,7 @@
     "react-md": "^1.0.11",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
+    "recompose": "^0.23.4",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.6"
   },
